use an object over a switch

--- a/snake.html
+++ b/snake.html
@@ -1,24 +1,20 @@
 <body>
   <script>
-    const keyToDir = key => {
-      switch (key) {
-        case 'ArrowRight':
-          return 0
-        case 'ArrowUp':
-          return 1
-        case 'ArrowLeft':
-          return 2
-        case 'ArrowDown':
-          return 3
-        default:
-          return null
-      }
+    const keyToDir = {
+      d: 0,
+      ArrowRight: 0,
+      w: 1,
+      ArrowUp: 1,
+      a: 2,
+      ArrowLeft: 2,
+      s: 3,
+      ArrowDown: 3,
     }
     const directions = [
       [1, 0],
       [0, -1],
       [-1, 0],
-      [0, 1]
+      [0, 1],
     ]
 
     const cellWidth = 10
@@ -63,9 +59,7 @@
       snakeMouthCtx.beginPath()
       snakeMouthCtx.moveTo(...centerPxCoords)
       const coordDiff = directions[headDirection]
-      const mouthCoords = centerPxDelta.map(
-        (cpxd, i) => cpxd * coordDiff[i] + centerPxCoords[i]
-      )
+      const mouthCoords = centerPxDelta.map((cpxd, i) => cpxd * coordDiff[i] + centerPxCoords[i])
       snakeMouthCtx.lineTo(...mouthCoords)
       snakeMouthCtx.stroke()
     }
@@ -109,14 +103,14 @@
     }
     document.addEventListener('keydown', function (event) {
       const { key } = event
-      const newDir = keyToDir(key)
-      if (newDir === null) return
+      const newDir = keyToDir[key]
+      if (newDir === undefined) return
       if (newDir === headDirection) return
       // cannot go backwards
       if (Math.abs(newDir - prevHeadDirection) === 2) return
       headDirection = newDir
       drawHead()
     })
-    setInterval(step, 500)
+    setInterval(step, 50)
   </script>
 </body>
